--- a/api/functions/get-swag-detail/package.json
+++ b/api/functions/get-swag-detail/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.445.0",
+    "@aws-sdk/client-eventbridge": "^3.454.0",
     "@aws-sdk/client-secrets-manager": "^3.445.0",
     "@aws-sdk/util-dynamodb": "^3.445.0"
   },
