--- a/api/functions/search/package.json
+++ b/api/functions/search/package.json
@@ -13,6 +13,7 @@
     "@gomomento/sdk": "^1.51.1"
   },
   "devDependencies": {
+    "@aws-sdk/client-eventbridge": "^3.454.0",
     "@aws-sdk/client-secrets-manager": "^3.445.0"
   }
 }
