--- a/api/template.yaml
+++ b/api/template.yaml
@@ -291,6 +291,9 @@ Resources:
               Action:
                 - dynamodb:Query
               Resource: !Sub ${SwagTable.Arn}/index/types
+            - Effect: Allow
+              Action: events:PutEvents
+              Resource: !Sub arn:${AWS::Partition}:events:${AWS::Region}:${AWS::AccountId}:event-bus/default
       Environment:
         Variables:
           TABLE_NAME: !Ref SwagTable
@@ -314,6 +317,9 @@ Resources:
               Action:
                 - dynamodb:UpdateItem
               Resource: !GetAtt SwagTable.Arn
+            - Effect: Allow
+              Action: events:PutEvents
+              Resource: !Sub arn:${AWS::Partition}:events:${AWS::Region}:${AWS::AccountId}:event-bus/default
       Environment:
         Variables:
           TABLE_NAME: !Ref SwagTable
@@ -375,6 +381,9 @@ Resources:
               Action:
                 - secretsmanager:GetSecretValue
               Resource: !Ref MomentoSecret
+            - Effect: Allow
+              Action: events:PutEvents
+              Resource: !Sub arn:${AWS::Partition}:events:${AWS::Region}:${AWS::AccountId}:event-bus/default
       Environment:
         Variables:
           SECRET_ID: !Ref MomentoSecret
@@ -430,6 +439,9 @@ Resources:
               Action:
                 - secretsmanager:GetSecretValue
               Resource: !Ref MomentoSecret
+            - Effect: Allow
+              Action: events:PutEvents
+              Resource: !Sub arn:${AWS::Partition}:events:${AWS::Region}:${AWS::AccountId}:event-bus/default
       Environment:
         Variables:
           TABLE_NAME: !Ref SwagTable
@@ -538,6 +550,44 @@ Resources:
       Environment:
         Variables:
           SECRET_ID: !Ref MomentoSecret
+
+  UpdateMetricsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: functions/update-metrics
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:UpdateItem
+              Resource: !GetAtt SwagTable.Arn
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref SwagTable
+      Events:
+        EventBridge:
+          Type: EventBridgeRule
+          Properties:
+            Pattern:
+              detail-type:
+                - Update Metrics
+
+  GetDailyValuesFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: functions/get-daily-values
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action: dynamodb:PutItem
+              Resource: !GetAtt SwagTable.Arn
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref SwagTable
 
   SharpLayer:
     Type: AWS::Serverless::LayerVersion
@@ -746,6 +796,44 @@ Resources:
               Resource:
                 - !GetAtt CreateSwagEmbeddingFunction.Arn
                 - !GetAtt RemoveEmbeddingFunction.Arn
+
+  RunReportsStateMachine:
+    Type: AWS::Serverless::StateMachine
+    Properties:
+      DefinitionUri: workflows/run-reports.asl.json
+      DefinitionSubstitutions:
+        DynamoDBGetItem: !Sub arn:${AWS::Partition}:states:::dynamodb:getItem
+        DynamoDBQuery: !Sub arn:${AWS::Partition}:states:::aws-sdk:dynamodb:query
+        LambdaInvoke: !Sub arn:${AWS::Partition}:states:::lambda:invoke
+        SwagTable: !Ref SwagTable
+        GetDailyValuesFunction: !GetAtt GetDailyValuesFunction.Arn
+      Policies:
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action: lambda:InvokeFunction
+              Resource: !GetAtt GetDailyValuesFunction.Arn
+            - Effect: Allow
+              Action:
+                - dynamodb:GetItem
+                - dynamodb:Query
+              Resource: !GetAtt SwagTable.Arn
+      Events:
+        S3ItemUploaded:
+          Type: EventBridgeRule
+          Properties:
+            Pattern:
+              source:
+                - aws.s3
+              detail-type:
+                - Object Created
+              detail:
+                bucket:
+                  name:
+                    - !Ref SwagBucket
+                object:
+                  key:
+                    - prefix: quarantine/
 
   GetSwagTypeFunction:
     Type: AWS::Serverless::Function
